# Marshal

./: .gitignore  DESIGN_DECISIONS.md  LICENSE  README.md  ideas.md  index.html  pyproject.toml
.github/workflows/: ci.yml
examples/: adk_gemini_example.py  agent_reliability_example.py  basic_example.py  chroma_example.py  circuit_breaker_example.py  compliance_report_example.py  framework_integration_example.py  mcp_governance_example.py  model_governance_example.py  residency_example.py  sensitive_data_example.py  shadow_mode_example.py  tool_governance_example.py
src/marshal_ai/: __init__.py  adapters.py  audit.py  cli.py  mcp.py  models.py  otel.py  policy.py  reports.py  retrieval.py  sensitive.py  sinks.py  tools.py
src/marshal_ai/integrations/: __init__.py
tests/: test_adapters.py  test_async.py  test_audit.py  test_cli.py  test_integrations.py  test_mcp.py  test_models.py  test_otel.py  test_policy.py  test_pushdown.py  test_redaction.py  test_reports.py  test_retrieval.py  test_sensitive.py  test_shadow.py  test_sinks.py  test_tools.py
