[project]
name = "marshal-ai"
version = "0.6.0"
description = "Governance for AI systems: permission-aware retrieval, tool-call approval, model routing/budgets, and an audit trail — one library, one place to see what happened."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Aryan Madaan" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Aryan-Madaan/marshal"
Issues = "https://github.com/Aryan-Madaan/marshal/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "openai>=1.0",
    "anthropic>=0.30",
]
chroma = ["chromadb>=0.4"]
opentelemetry = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marshal_ai"]
