[project]
name = "marshal-ai"
version = "0.11.0"
description = "Governance for AI systems: permission-aware retrieval (with real Chroma/LangChain vector-store adapters) backed by an observe-first shadow mode, tool-call approval with rate limiting/jurisdictional risk tiering (including MCP tool-call governance), model routing/budgets/data-residency/reliability, and a durable, tamper-evident audit trail with EU AI Act-shaped compliance reports — one library, one place to see what happened."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Aryan Madaan" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Aryan-Madaan/marshal"
Issues = "https://github.com/Aryan-Madaan/marshal/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "openai>=1.0",
    "anthropic>=0.30",
    "google-genai>=1.0",
    "chromadb>=0.4",
    "langchain-core>=0.3",
    "mcp>=1.0",
]
chroma = ["chromadb>=0.4"]
langchain = ["langchain-core>=0.3"]
mcp = ["mcp>=1.0"]
opentelemetry = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
google-genai = ["google-genai>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marshal_ai"]
